--- a/lit-shoelace/dev/index.html
+++ b/lit-shoelace/dev/index.html
@@ -1,20 +1,7 @@
-<!doctype html>
-
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>&lt;my-element> Demo</title>
-    <script type="module" src="../src-outDir/my-element.js"></script>
-    <style>
-      p {
-        border: solid 1px blue;
-        padding: 8px;
-      }
-    </style>
-  </head>
-  <body>
-    <my-element>
-      <p>This is child content</p>
-    </my-element>
-  </body>
-</html>
+<!DOCTYPE html>
+<head>
+  <script type="module" src="dev/src/components/pages/page-handler.ts"></script>
+</head>
+<body>
+  <page-handler></page-handler>
+</body>
