--- a/lit-shoelace/dev/index.html
+++ b/lit-shoelace/dev/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Luna</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@latest/dist/shoelace/shoelace.css">
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@latest/dist/shoelace/shoelace.esm.js"></script>
   <script type="module" src="dev/src/components/pages/page-handler.ts"></script>
 </head>
-<body>
+<body style="padding:0px; margin:0px">
+  <luna-context class="luna-context"></luna-context>
   <page-handler></page-handler>
 </body>
+</html>
