--- a/lit-shoelace/dev/index.html
+++ b/lit-shoelace/dev/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Luna</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@latest/dist/shoelace/shoelace.css">
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@latest/dist/shoelace/shoelace.esm.js"></script>
+  <link rel="stylesheet" href="../node_modules/@shoelace-style/shoelace/dist/themes/light.css" />
+  <script type="module" src="../node_modules/@shoelace-style/shoelace/dist/shoelace.js"></script>  
   <script type="module" src="dev/src/components/pages/page-handler.ts"></script>
 </head>
 <body style="padding:0px; margin:0px">
